[tool.poetry]
name = "datapipe-ws"
version = "0.1.0"
description = ""
authors = ["Andrey Tatarinov <a@tatarinov.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"

datapipe-core = { path = "../datapipe", extras=["sqlite", "ray"], develop = true }
datapipe-app = { path = "../datapipe-app", develop = true }

[tool.poetry.group.dev.dependencies]
mypy = "^1.11.1"
pandas-stubs = "^2.2.2.240807"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
