[project]
name = "datapipe-ws"
version = "0.1.0"
description = ""
requires-python = ">=3.10"
dependencies = [
    "datapipe-core[sqlite,ray,redis,milvus,qdrant,gcsfs,excel]",
    "datapipe-app",
    "datapipe-label-studio-lite",
]

[tool.uv]
dev-dependencies = [
    "isort>=5.13.2",
    "mypy>=1.11.2",
    "pandas-stubs>=2.2.2.240807",
    "pytest-cases>=3.8.5",
    "pytest>=8.3.2",
    "types-requests>=2.32.0.20240712",
]

[tool.uv.sources]
datapipe-core = { path = "../datapipe", editable = true }
datapipe-app = { path = "../datapipe-app", editable = true }
datapipe-label-studio-lite = { path = "../datapipe-label-studio-lite", editable = true }
